--- a/src/context/language/languages/polish.json
+++ b/src/context/language/languages/polish.json
@@ -1,6 +1,10 @@
 {
     "id": "1",
     "name": "polish",
+    "for": [
+        "pl",
+        "polish"
+    ],
     "language": "Polski",
     "title": "Tytuł",
     "setThisLanguage": "Ustaw język 'Polski'",
